deploy: 807b7dba5a3ca8027cd6efbcac37652e5e280357

--- a/coding/Pandas/intro.html
+++ b/coding/Pandas/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Introduction" href="1_basics.html" />
-    <link rel="prev" title="NumPy Arrays" href="../NumPy_Arrays.html" />
+    <link rel="prev" title="Plotting data with Matplotlib" href="../Intro to Python/17_Matplotlib.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -76,6 +76,9 @@
     <li class="">
       <a href="../NumPy_Arrays.html">NumPy Arrays</a>
     </li>
+    <li class="">
+      <a href="../Intro to Python/intro.html">Intro to Python</a>
+    </li>
     <li class="active">
       <a href="">Pandas</a>
       <ul class="nav sidenav_l3">
@@ -99,19 +102,16 @@
       </li>
     </ul>
     </li>
-    <li class="">
-      <a href="../Intro to Python/intro.html">Intro to Python</a>
-    </li>
   </ul>
   </li>
   <li class="">
-    <a href="../../z_extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
+    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
   <li class="">
     <a href="../../mathematics/intro.html">Mathematics</a>
   </li>
   <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
+    <a href="../../z_extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
   </li>
   <li class="">
     <a href="../../genindex.html">Index</a>
@@ -263,7 +263,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../NumPy_Arrays.html" title="previous page">NumPy Arrays</a>
+    <a class='left-prev' id="prev-link" href="../Intro to Python/17_Matplotlib.html" title="previous page">Plotting data with Matplotlib</a>
     <a class='right-next' id="next-link" href="1_basics.html" title="next page">Introduction</a>
 
     </div>
