--- a/mathematics/intro.html
+++ b/mathematics/intro.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Numerical methods" href="numerical_methods/intro.html" />
-    <link rel="prev" title="Particle Image Velocimetry (PIV)" href="../z_extra_resources_for_researchers/Particle_Image_Velocimetry.html" />
+    <link rel="next" title="Calculus" href="calculus/intro.html" />
+    <link rel="prev" title="Waves" href="../geosciences/Wave_dispersion.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -74,16 +74,13 @@
     <a href="../coding/intro.html">Coding</a>
   </li>
   <li class="">
-    <a href="../z_extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
+    <a href="../geosciences/intro.html">Geosciences</a>
   </li>
   <li class="active">
     <a href="">Mathematics</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="numerical_methods/intro.html">Numerical methods</a>
-    </li>
-    <li class="">
-      <a href="statistics/intro.html">Statistics</a>
+      <a href="calculus/intro.html">Calculus</a>
     </li>
     <li class="">
       <a href="complex analysis/intro.html">Complex Analysis</a>
@@ -92,24 +89,27 @@
       <a href="linear_algebra/intro.html">Linear Algebra</a>
     </li>
     <li class="">
-      <a href="calculus/intro.html">Calculus</a>
-    </li>
-    <li class="">
-      <a href="series_and_sequences/intro.html">Series and sequences</a>
+      <a href="math_methods_1/intro.html">Mathematical Methods 1</a>
     </li>
     <li class="">
       <a href="mathematical_notation/intro.html">Mathematical notation</a>
     </li>
     <li class="">
+      <a href="numerical_methods/intro.html">Numerical methods</a>
+    </li>
+    <li class="">
+      <a href="series_and_sequences/intro.html">Series and sequences</a>
+    </li>
+    <li class="">
       <a href="sets and functions/intro.html">Sets and functions</a>
     </li>
     <li class="">
-      <a href="math_methods_1/intro.html">Mathematical Methods 1</a>
+      <a href="statistics/intro.html">Statistics</a>
     </li>
   </ul>
   </li>
   <li class="">
-    <a href="../geosciences/intro.html">Geosciences</a>
+    <a href="../z_extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
   </li>
   <li class="">
     <a href="../genindex.html">Index</a>
@@ -220,8 +220,8 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../z_extra_resources_for_researchers/Particle_Image_Velocimetry.html" title="previous page">Particle Image Velocimetry (PIV)</a>
-    <a class='right-next' id="next-link" href="numerical_methods/intro.html" title="next page">Numerical methods</a>
+    <a class='left-prev' id="prev-link" href="../geosciences/Wave_dispersion.html" title="previous page">Waves</a>
+    <a class='right-next' id="next-link" href="calculus/intro.html" title="next page">Calculus</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
