--- a/z_extra_resources_for_researchers/Particle_Image_Velocimetry.html
+++ b/z_extra_resources_for_researchers/Particle_Image_Velocimetry.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Mathematics" href="../mathematics/intro.html" />
+    <link rel="next" title="Index" href="../genindex.html" />
     <link rel="prev" title="Google Earth Engine Getting Started" href="Google_Earth_Engine_Getting_Started_.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -73,6 +73,12 @@
   <li class="">
     <a href="../coding/intro.html">Coding</a>
   </li>
+  <li class="">
+    <a href="../geosciences/intro.html">Geosciences</a>
+  </li>
+  <li class="">
+    <a href="../mathematics/intro.html">Mathematics</a>
+  </li>
   <li class="active">
     <a href="intro.html">Extra resources for researchers</a>
   <ul class="nav sidenav_l2">
@@ -95,12 +101,6 @@
       <a href="">Particle Image Velocimetry (PIV)</a>
     </li>
   </ul>
-  </li>
-  <li class="">
-    <a href="../mathematics/intro.html">Mathematics</a>
-  </li>
-  <li class="">
-    <a href="../geosciences/intro.html">Geosciences</a>
   </li>
   <li class="">
     <a href="../genindex.html">Index</a>
@@ -671,7 +671,7 @@ end of iterative process.. Re-arranging vector fields..
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Google_Earth_Engine_Getting_Started_.html" title="previous page">Google Earth Engine Getting Started</a>
-    <a class='right-next' id="next-link" href="../mathematics/intro.html" title="next page">Mathematics</a>
+    <a class='right-next' id="next-link" href="../genindex.html" title="next page">Index</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
