--- a/z_extra_resources_for_researchers/intro.html
+++ b/z_extra_resources_for_researchers/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Camera Calibration" href="Camera_Calibration.html" />
-    <link rel="prev" title="Plotting data with Matplotlib" href="../coding/Intro to Python/17_Matplotlib.html" />
+    <link rel="prev" title="Introduction to statistics for Geoscientists" href="../mathematics/statistics/Statistics_for_Geoscientists.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -73,6 +73,12 @@
   <li class="">
     <a href="../coding/intro.html">Coding</a>
   </li>
+  <li class="">
+    <a href="../geosciences/intro.html">Geosciences</a>
+  </li>
+  <li class="">
+    <a href="../mathematics/intro.html">Mathematics</a>
+  </li>
   <li class="active">
     <a href="">Extra resources for researchers</a>
   <ul class="nav sidenav_l2">
@@ -95,12 +101,6 @@
       <a href="Particle_Image_Velocimetry.html">Particle Image Velocimetry (PIV)</a>
     </li>
   </ul>
-  </li>
-  <li class="">
-    <a href="../mathematics/intro.html">Mathematics</a>
-  </li>
-  <li class="">
-    <a href="../geosciences/intro.html">Geosciences</a>
   </li>
   <li class="">
     <a href="../genindex.html">Index</a>
@@ -211,7 +211,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../coding/Intro to Python/17_Matplotlib.html" title="previous page">Plotting data with Matplotlib</a>
+    <a class='left-prev' id="prev-link" href="../mathematics/statistics/Statistics_for_Geoscientists.html" title="previous page">Introduction to statistics for Geoscientists</a>
     <a class='right-next' id="next-link" href="Camera_Calibration.html" title="next page">Camera Calibration</a>
 
     </div>
