--- a/coding/Intro to Python/17_Matplotlib.html
+++ b/coding/Intro to Python/17_Matplotlib.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Extra resources for researchers" href="../../z_extra_resources_for_researchers/intro.html" />
+    <link rel="next" title="Pandas" href="../Pandas/intro.html" />
     <link rel="prev" title="Sets" href="16_Sets.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -75,9 +75,6 @@
   <ul class="nav sidenav_l2">
     <li class="">
       <a href="../NumPy_Arrays.html">NumPy Arrays</a>
-    </li>
-    <li class="">
-      <a href="../Pandas/intro.html">Pandas</a>
     </li>
     <li class="active">
       <a href="intro.html">Intro to Python</a>
@@ -135,16 +132,19 @@
       </li>
     </ul>
     </li>
+    <li class="">
+      <a href="../Pandas/intro.html">Pandas</a>
+    </li>
   </ul>
   </li>
   <li class="">
-    <a href="../../z_extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
+    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
   <li class="">
     <a href="../../mathematics/intro.html">Mathematics</a>
   </li>
   <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
+    <a href="../../z_extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
   </li>
   <li class="">
     <a href="../../genindex.html">Index</a>
@@ -502,7 +502,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="16_Sets.html" title="previous page">Sets</a>
-    <a class='right-next' id="next-link" href="../../z_extra_resources_for_researchers/intro.html" title="next page">Extra resources for researchers</a>
+    <a class='right-next' id="next-link" href="../Pandas/intro.html" title="next page">Pandas</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
