--- a/coding/Intro to Python/intro.html
+++ b/coding/Intro to Python/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Printing and formatting statements" href="1_Printing_and_formatting_statements.html" />
-    <link rel="prev" title="Plotting" href="../Pandas/6_plotting.html" />
+    <link rel="prev" title="NumPy Arrays" href="../NumPy_Arrays.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -75,9 +75,6 @@
   <ul class="nav sidenav_l2">
     <li class="">
       <a href="../NumPy_Arrays.html">NumPy Arrays</a>
-    </li>
-    <li class="">
-      <a href="../Pandas/intro.html">Pandas</a>
     </li>
     <li class="active">
       <a href="">Intro to Python</a>
@@ -135,16 +132,19 @@
       </li>
     </ul>
     </li>
+    <li class="">
+      <a href="../Pandas/intro.html">Pandas</a>
+    </li>
   </ul>
   </li>
   <li class="">
-    <a href="../../z_extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
+    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
   <li class="">
     <a href="../../mathematics/intro.html">Mathematics</a>
   </li>
   <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
+    <a href="../../z_extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
   </li>
   <li class="">
     <a href="../../genindex.html">Index</a>
@@ -310,7 +310,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../Pandas/6_plotting.html" title="previous page">Plotting</a>
+    <a class='left-prev' id="prev-link" href="../NumPy_Arrays.html" title="previous page">NumPy Arrays</a>
     <a class='right-next' id="next-link" href="1_Printing_and_formatting_statements.html" title="next page">Printing and formatting statements</a>
 
     </div>
