--- a/coding/Pandas/6_plotting.html
+++ b/coding/Pandas/6_plotting.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Intro to Python" href="../Intro to Python/intro.html" />
+    <link rel="next" title="Geosciences" href="../../geosciences/intro.html" />
     <link rel="prev" title="Creating date-time stamps" href="5_time_stamps.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -76,6 +76,9 @@
     <li class="">
       <a href="../NumPy_Arrays.html">NumPy Arrays</a>
     </li>
+    <li class="">
+      <a href="../Intro to Python/intro.html">Intro to Python</a>
+    </li>
     <li class="active">
       <a href="intro.html">Pandas</a>
       <ul class="nav sidenav_l3">
@@ -99,19 +102,16 @@
       </li>
     </ul>
     </li>
-    <li class="">
-      <a href="../Intro to Python/intro.html">Intro to Python</a>
-    </li>
   </ul>
   </li>
   <li class="">
-    <a href="../../z_extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
+    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
   <li class="">
     <a href="../../mathematics/intro.html">Mathematics</a>
   </li>
   <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
+    <a href="../../z_extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
   </li>
   <li class="">
     <a href="../../genindex.html">Index</a>
@@ -400,7 +400,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="5_time_stamps.html" title="previous page">Creating date-time stamps</a>
-    <a class='right-next' id="next-link" href="../Intro to Python/intro.html" title="next page">Intro to Python</a>
+    <a class='right-next' id="next-link" href="../../geosciences/intro.html" title="next page">Geosciences</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
