--- a/geosciences/Wave_dispersion.html
+++ b/geosciences/Wave_dispersion.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Index" href="../genindex.html" />
+    <link rel="next" title="Mathematics" href="../mathematics/intro.html" />
     <link rel="prev" title="Tides" href="Tides.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -73,12 +73,6 @@
   <li class="">
     <a href="../coding/intro.html">Coding</a>
   </li>
-  <li class="">
-    <a href="../z_extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
-  </li>
-  <li class="">
-    <a href="../mathematics/intro.html">Mathematics</a>
-  </li>
   <li class="active">
     <a href="intro.html">Geosciences</a>
   <ul class="nav sidenav_l2">
@@ -113,6 +107,12 @@
       <a href="">Waves</a>
     </li>
   </ul>
+  </li>
+  <li class="">
+    <a href="../mathematics/intro.html">Mathematics</a>
+  </li>
+  <li class="">
+    <a href="../z_extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
   </li>
   <li class="">
     <a href="../genindex.html">Index</a>
@@ -7682,7 +7682,7 @@ b28AAAAdZGF0YQAAAAEAAAAATGF2ZjU4LjI5LjEwMA==
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Tides.html" title="previous page">Tides</a>
-    <a class='right-next' id="next-link" href="../genindex.html" title="next page">Index</a>
+    <a class='right-next' id="next-link" href="../mathematics/intro.html" title="next page">Mathematics</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
