--- a/geosciences/intro.html
+++ b/geosciences/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="1D Resistivity Forward Modelling" href="1D_Resistivity_Forward_Modelling.html" />
-    <link rel="prev" title="Lecture 1 (Vectors)" href="../mathematics/math_methods_1/Vectors.html" />
+    <link rel="prev" title="Plotting" href="../coding/Pandas/6_plotting.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -73,12 +73,6 @@
   <li class="">
     <a href="../coding/intro.html">Coding</a>
   </li>
-  <li class="">
-    <a href="../z_extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
-  </li>
-  <li class="">
-    <a href="../mathematics/intro.html">Mathematics</a>
-  </li>
   <li class="active">
     <a href="">Geosciences</a>
   <ul class="nav sidenav_l2">
@@ -113,6 +107,12 @@
       <a href="Wave_dispersion.html">Waves</a>
     </li>
   </ul>
+  </li>
+  <li class="">
+    <a href="../mathematics/intro.html">Mathematics</a>
+  </li>
+  <li class="">
+    <a href="../z_extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
   </li>
   <li class="">
     <a href="../genindex.html">Index</a>
@@ -223,7 +223,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../mathematics/math_methods_1/Vectors.html" title="previous page">Lecture 1 (Vectors)</a>
+    <a class='left-prev' id="prev-link" href="../coding/Pandas/6_plotting.html" title="previous page">Plotting</a>
     <a class='right-next' id="next-link" href="1D_Resistivity_Forward_Modelling.html" title="next page">1D Resistivity Forward Modelling</a>
 
     </div>
