--- a/mathematics/calculus/intro.html
+++ b/mathematics/calculus/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Vector calculus" href="Vector_calculus.html" />
-    <link rel="prev" title="Theory" href="../linear_algebra/Theory.html" />
+    <link rel="prev" title="Mathematics" href="../intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -74,23 +74,11 @@
     <a href="../../coding/intro.html">Coding</a>
   </li>
   <li class="">
-    <a href="../../z_extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
+    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
   <li class="active">
     <a href="../intro.html">Mathematics</a>
   <ul class="nav sidenav_l2">
-    <li class="">
-      <a href="../numerical_methods/intro.html">Numerical methods</a>
-    </li>
-    <li class="">
-      <a href="../statistics/intro.html">Statistics</a>
-    </li>
-    <li class="">
-      <a href="../complex analysis/intro.html">Complex Analysis</a>
-    </li>
-    <li class="">
-      <a href="../linear_algebra/intro.html">Linear Algebra</a>
-    </li>
     <li class="active">
       <a href="">Calculus</a>
       <ul class="nav sidenav_l3">
@@ -100,21 +88,33 @@
     </ul>
     </li>
     <li class="">
-      <a href="../series_and_sequences/intro.html">Series and sequences</a>
+      <a href="../complex analysis/intro.html">Complex Analysis</a>
+    </li>
+    <li class="">
+      <a href="../linear_algebra/intro.html">Linear Algebra</a>
+    </li>
+    <li class="">
+      <a href="../math_methods_1/intro.html">Mathematical Methods 1</a>
     </li>
     <li class="">
       <a href="../mathematical_notation/intro.html">Mathematical notation</a>
     </li>
     <li class="">
+      <a href="../numerical_methods/intro.html">Numerical methods</a>
+    </li>
+    <li class="">
+      <a href="../series_and_sequences/intro.html">Series and sequences</a>
+    </li>
+    <li class="">
       <a href="../sets and functions/intro.html">Sets and functions</a>
     </li>
     <li class="">
-      <a href="../math_methods_1/intro.html">Mathematical Methods 1</a>
+      <a href="../statistics/intro.html">Statistics</a>
     </li>
   </ul>
   </li>
   <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
+    <a href="../../z_extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
   </li>
   <li class="">
     <a href="../../genindex.html">Index</a>
@@ -224,7 +224,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../linear_algebra/Theory.html" title="previous page">Theory</a>
+    <a class='left-prev' id="prev-link" href="../intro.html" title="previous page">Mathematics</a>
     <a class='right-next' id="next-link" href="Vector_calculus.html" title="next page">Vector calculus</a>
 
     </div>
