--- a/mathematics/complex analysis/intro.html
+++ b/mathematics/complex analysis/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Fractals" href="Fractals.html" />
-    <link rel="prev" title="Introduction to statistics for Geoscientists" href="../statistics/Statistics_for_Geoscientists.html" />
+    <link rel="prev" title="Vector calculus" href="../calculus/Vector_calculus.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -74,16 +74,13 @@
     <a href="../../coding/intro.html">Coding</a>
   </li>
   <li class="">
-    <a href="../../z_extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
+    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
   <li class="active">
     <a href="../intro.html">Mathematics</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="../numerical_methods/intro.html">Numerical methods</a>
-    </li>
-    <li class="">
-      <a href="../statistics/intro.html">Statistics</a>
+      <a href="../calculus/intro.html">Calculus</a>
     </li>
     <li class="active">
       <a href="">Complex Analysis</a>
@@ -112,24 +109,27 @@
       <a href="../linear_algebra/intro.html">Linear Algebra</a>
     </li>
     <li class="">
-      <a href="../calculus/intro.html">Calculus</a>
-    </li>
-    <li class="">
-      <a href="../series_and_sequences/intro.html">Series and sequences</a>
+      <a href="../math_methods_1/intro.html">Mathematical Methods 1</a>
     </li>
     <li class="">
       <a href="../mathematical_notation/intro.html">Mathematical notation</a>
     </li>
     <li class="">
+      <a href="../numerical_methods/intro.html">Numerical methods</a>
+    </li>
+    <li class="">
+      <a href="../series_and_sequences/intro.html">Series and sequences</a>
+    </li>
+    <li class="">
       <a href="../sets and functions/intro.html">Sets and functions</a>
     </li>
     <li class="">
-      <a href="../math_methods_1/intro.html">Mathematical Methods 1</a>
+      <a href="../statistics/intro.html">Statistics</a>
     </li>
   </ul>
   </li>
   <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
+    <a href="../../z_extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
   </li>
   <li class="">
     <a href="../../genindex.html">Index</a>
@@ -306,7 +306,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../statistics/Statistics_for_Geoscientists.html" title="previous page">Introduction to statistics for Geoscientists</a>
+    <a class='left-prev' id="prev-link" href="../calculus/Vector_calculus.html" title="previous page">Vector calculus</a>
     <a class='right-next' id="next-link" href="Fractals.html" title="next page">Fractals</a>
 
     </div>
