--- a/mathematics/mathematical_notation/intro.html
+++ b/mathematics/mathematical_notation/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Big O notation" href="Big_O_notation.html" />
-    <link rel="prev" title="Taylor series" href="../series_and_sequences/Taylor_series.html" />
+    <link rel="prev" title="Lecture 1 (Vectors)" href="../math_methods_1/Vectors.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -74,16 +74,13 @@
     <a href="../../coding/intro.html">Coding</a>
   </li>
   <li class="">
-    <a href="../../z_extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
+    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
   <li class="active">
     <a href="../intro.html">Mathematics</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="../numerical_methods/intro.html">Numerical methods</a>
-    </li>
-    <li class="">
-      <a href="../statistics/intro.html">Statistics</a>
+      <a href="../calculus/intro.html">Calculus</a>
     </li>
     <li class="">
       <a href="../complex analysis/intro.html">Complex Analysis</a>
@@ -92,10 +89,7 @@
       <a href="../linear_algebra/intro.html">Linear Algebra</a>
     </li>
     <li class="">
-      <a href="../calculus/intro.html">Calculus</a>
-    </li>
-    <li class="">
-      <a href="../series_and_sequences/intro.html">Series and sequences</a>
+      <a href="../math_methods_1/intro.html">Mathematical Methods 1</a>
     </li>
     <li class="active">
       <a href="">Mathematical notation</a>
@@ -109,15 +103,21 @@
     </ul>
     </li>
     <li class="">
+      <a href="../numerical_methods/intro.html">Numerical methods</a>
+    </li>
+    <li class="">
+      <a href="../series_and_sequences/intro.html">Series and sequences</a>
+    </li>
+    <li class="">
       <a href="../sets and functions/intro.html">Sets and functions</a>
     </li>
     <li class="">
-      <a href="../math_methods_1/intro.html">Mathematical Methods 1</a>
+      <a href="../statistics/intro.html">Statistics</a>
     </li>
   </ul>
   </li>
   <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
+    <a href="../../z_extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
   </li>
   <li class="">
     <a href="../../genindex.html">Index</a>
@@ -227,7 +227,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../series_and_sequences/Taylor_series.html" title="previous page">Taylor series</a>
+    <a class='left-prev' id="prev-link" href="../math_methods_1/Vectors.html" title="previous page">Lecture 1 (Vectors)</a>
     <a class='right-next' id="next-link" href="Big_O_notation.html" title="next page">Big O notation</a>
 
     </div>
