--- a/mathematics/statistics/Statistics_for_Geoscientists.html
+++ b/mathematics/statistics/Statistics_for_Geoscientists.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Complex Analysis" href="../complex analysis/intro.html" />
+    <link rel="next" title="Extra resources for researchers" href="../../z_extra_resources_for_researchers/intro.html" />
     <link rel="prev" title="Linear Regression" href="Linear_Regression.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -74,13 +74,34 @@
     <a href="../../coding/intro.html">Coding</a>
   </li>
   <li class="">
-    <a href="../../z_extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
+    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
   <li class="active">
     <a href="../intro.html">Mathematics</a>
   <ul class="nav sidenav_l2">
     <li class="">
+      <a href="../calculus/intro.html">Calculus</a>
+    </li>
+    <li class="">
+      <a href="../complex analysis/intro.html">Complex Analysis</a>
+    </li>
+    <li class="">
+      <a href="../linear_algebra/intro.html">Linear Algebra</a>
+    </li>
+    <li class="">
+      <a href="../math_methods_1/intro.html">Mathematical Methods 1</a>
+    </li>
+    <li class="">
+      <a href="../mathematical_notation/intro.html">Mathematical notation</a>
+    </li>
+    <li class="">
       <a href="../numerical_methods/intro.html">Numerical methods</a>
+    </li>
+    <li class="">
+      <a href="../series_and_sequences/intro.html">Series and sequences</a>
+    </li>
+    <li class="">
+      <a href="../sets and functions/intro.html">Sets and functions</a>
     </li>
     <li class="active">
       <a href="intro.html">Statistics</a>
@@ -93,31 +114,10 @@
       </li>
     </ul>
     </li>
-    <li class="">
-      <a href="../complex analysis/intro.html">Complex Analysis</a>
-    </li>
-    <li class="">
-      <a href="../linear_algebra/intro.html">Linear Algebra</a>
-    </li>
-    <li class="">
-      <a href="../calculus/intro.html">Calculus</a>
-    </li>
-    <li class="">
-      <a href="../series_and_sequences/intro.html">Series and sequences</a>
-    </li>
-    <li class="">
-      <a href="../mathematical_notation/intro.html">Mathematical notation</a>
-    </li>
-    <li class="">
-      <a href="../sets and functions/intro.html">Sets and functions</a>
-    </li>
-    <li class="">
-      <a href="../math_methods_1/intro.html">Mathematical Methods 1</a>
-    </li>
   </ul>
   </li>
   <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
+    <a href="../../z_extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
   </li>
   <li class="">
     <a href="../../genindex.html">Index</a>
@@ -1084,7 +1084,7 @@ Group 2 p-value = 0.00040.
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Linear_Regression.html" title="previous page">Linear Regression</a>
-    <a class='right-next' id="next-link" href="../complex analysis/intro.html" title="next page">Complex Analysis</a>
+    <a class='right-next' id="next-link" href="../../z_extra_resources_for_researchers/intro.html" title="next page">Extra resources for researchers</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
