deploy: 2936a7da956eb9dab9e1d690a6000359e27359b1

--- a/coding/Intro to Python/10_Importing.html
+++ b/coding/Intro to Python/10_Importing.html
@@ -130,6 +130,9 @@
       <li class="">
         <a href="17_Matplotlib.html">Plotting data with Matplotlib</a>
       </li>
+      <li class="">
+        <a href="Variables.html">Variables</a>
+      </li>
     </ul>
     </li>
     <li class="">
