--- a/coding/Intro to Python/7_List_comprehensions.html
+++ b/coding/Intro to Python/7_List_comprehensions.html
@@ -130,6 +130,9 @@
       <li class="">
         <a href="17_Matplotlib.html">Plotting data with Matplotlib</a>
       </li>
+      <li class="">
+        <a href="Variables.html">Variables</a>
+      </li>
     </ul>
     </li>
     <li class="">
