deploy: 2a6191c62621522d22bd9eeff002f684d70296f6

--- a/mathematics/math_methods_1/Coordinate_Systems.html
+++ b/mathematics/math_methods_1/Coordinate_Systems.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Lecture 1 (Vectors)" href="Vectors.html" />
+    <link rel="next" title="Vectors" href="Vectors.html" />
     <link rel="prev" title="Mathematical Methods 1" href="intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -95,7 +95,7 @@
         <a href="">Coordinate systems</a>
       </li>
       <li class="">
-        <a href="Vectors.html">Lecture 1 (Vectors)</a>
+        <a href="Vectors.html">Vectors</a>
       </li>
     </ul>
     </li>
@@ -802,7 +802,7 @@ y = -3904.71
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Mathematical Methods 1</a>
-    <a class='right-next' id="next-link" href="Vectors.html" title="next page">Lecture 1 (Vectors)</a>
+    <a class='right-next' id="next-link" href="Vectors.html" title="next page">Vectors</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
