--- a/mathematics/math_methods_1/intro.html
+++ b/mathematics/math_methods_1/intro.html
@@ -95,7 +95,7 @@
         <a href="Coordinate_Systems.html">Coordinate systems</a>
       </li>
       <li class="">
-        <a href="Vectors.html">Lecture 1 (Vectors)</a>
+        <a href="Vectors.html">Vectors</a>
       </li>
     </ul>
     </li>
