--- a/mathematics/mathematical_notation/intro.html
+++ b/mathematics/mathematical_notation/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Big O notation" href="Big_O_notation.html" />
-    <link rel="prev" title="Lecture 1 (Vectors)" href="../math_methods_1/Vectors.html" />
+    <link rel="prev" title="Vectors" href="../math_methods_1/Vectors.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -227,7 +227,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../math_methods_1/Vectors.html" title="previous page">Lecture 1 (Vectors)</a>
+    <a class='left-prev' id="prev-link" href="../math_methods_1/Vectors.html" title="previous page">Vectors</a>
     <a class='right-next' id="next-link" href="Big_O_notation.html" title="next page">Big O notation</a>
 
     </div>
