deploy: d2dafd57ff306a2eab39c944e2502b421980b64b

--- a/coding/Intro to Python/17_Matplotlib.html
+++ b/coding/Intro to Python/17_Matplotlib.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Variables" href="Variables.html" />
+    <link rel="next" title="Pandas" href="../Pandas/intro.html" />
     <link rel="prev" title="Sets" href="16_Sets.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -129,9 +129,6 @@
       </li>
       <li class="active">
         <a href="">Plotting data with Matplotlib</a>
-      </li>
-      <li class="">
-        <a href="Variables.html">Variables</a>
       </li>
     </ul>
     </li>
@@ -505,7 +502,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="16_Sets.html" title="previous page">Sets</a>
-    <a class='right-next' id="next-link" href="Variables.html" title="next page">Variables</a>
+    <a class='right-next' id="next-link" href="../Pandas/intro.html" title="next page">Pandas</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
