--- a/coding/Pandas/intro.html
+++ b/coding/Pandas/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Introduction" href="1_basics.html" />
-    <link rel="prev" title="Variables" href="../Intro to Python/Variables.html" />
+    <link rel="prev" title="Plotting data with Matplotlib" href="../Intro to Python/17_Matplotlib.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -263,7 +263,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../Intro to Python/Variables.html" title="previous page">Variables</a>
+    <a class='left-prev' id="prev-link" href="../Intro to Python/17_Matplotlib.html" title="previous page">Plotting data with Matplotlib</a>
     <a class='right-next' id="next-link" href="1_basics.html" title="next page">Introduction</a>
 
     </div>
