--- a/genindex.html
+++ b/genindex.html
@@ -518,7 +518,7 @@
 <h2 id="V">V</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="coding/Intro to Python/2_Variables.html#index-0">Variables</a>, <a href="coding/Intro to Python/Variables.html#index-0">[1]</a>
+      <li><a href="coding/Intro to Python/2_Variables.html#index-0">Variables</a>
 </li>
       <li><a href="mathematics/calculus/Vector_calculus.html#index-0">Vector calculus</a>
 </li>
