--- a/geosciences/Image_Transformations_and_Orthorectification.html
+++ b/geosciences/Image_Transformations_and_Orthorectification.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Milankovitch cycles" href="Milankovitch_cycles.html" />
+    <link rel="next" title="Keplerian orbits" href="Keplerian_Orbits.html" />
     <link rel="prev" title="Remote Sensing: Image Point Operations" href="Image_Point_Operations.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -83,7 +83,7 @@
       <a href="Climate_Model.html">Climate model</a>
     </li>
     <li class="">
-      <a href="Dynamic_Earth.html">Dynamic Earth and Planets</a>
+      <a href="Dynamic_Earth.html">Seafloor ages</a>
     </li>
     <li class="">
       <a href="Image_Filtering.html">Image Filtering</a>
@@ -95,6 +95,9 @@
       <a href="">Image Transformations and orthorectification</a>
     </li>
     <li class="">
+      <a href="Keplerian_Orbits.html">Keplerian orbits</a>
+    </li>
+    <li class="">
       <a href="Milankovitch_cycles.html">Milankovitch cycles</a>
     </li>
     <li class="">
@@ -104,7 +107,7 @@
       <a href="Tides.html">Tides</a>
     </li>
     <li class="">
-      <a href="Wave_dispersion.html">Waves</a>
+      <a href="Wave_dispersion.html">Wave dispersion</a>
     </li>
   </ul>
   </li>
@@ -554,7 +557,7 @@ pos 4  coord (x,y)= 720 729
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Image_Point_Operations.html" title="previous page">Remote Sensing: Image Point Operations</a>
-    <a class='right-next' id="next-link" href="Milankovitch_cycles.html" title="next page">Milankovitch cycles</a>
+    <a class='right-next' id="next-link" href="Keplerian_Orbits.html" title="next page">Keplerian orbits</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
