--- a/geosciences/Climate_Model.html
+++ b/geosciences/Climate_Model.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Dynamic Earth and Planets" href="Dynamic_Earth.html" />
+    <link rel="next" title="Seafloor ages" href="Dynamic_Earth.html" />
     <link rel="prev" title="1D Resistivity Forward Modelling" href="1D_Resistivity_Forward_Modelling.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -83,7 +83,7 @@
       <a href="">Climate model</a>
     </li>
     <li class="">
-      <a href="Dynamic_Earth.html">Dynamic Earth and Planets</a>
+      <a href="Dynamic_Earth.html">Seafloor ages</a>
     </li>
     <li class="">
       <a href="Image_Filtering.html">Image Filtering</a>
@@ -95,6 +95,9 @@
       <a href="Image_Transformations_and_Orthorectification.html">Image Transformations and orthorectification</a>
     </li>
     <li class="">
+      <a href="Keplerian_Orbits.html">Keplerian orbits</a>
+    </li>
+    <li class="">
       <a href="Milankovitch_cycles.html">Milankovitch cycles</a>
     </li>
     <li class="">
@@ -104,7 +107,7 @@
       <a href="Tides.html">Tides</a>
     </li>
     <li class="">
-      <a href="Wave_dispersion.html">Waves</a>
+      <a href="Wave_dispersion.html">Wave dispersion</a>
     </li>
   </ul>
   </li>
@@ -439,7 +442,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="1D_Resistivity_Forward_Modelling.html" title="previous page">1D Resistivity Forward Modelling</a>
-    <a class='right-next' id="next-link" href="Dynamic_Earth.html" title="next page">Dynamic Earth and Planets</a>
+    <a class='right-next' id="next-link" href="Dynamic_Earth.html" title="next page">Seafloor ages</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
