--- a/geosciences/Image_Filtering.html
+++ b/geosciences/Image_Filtering.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Remote Sensing: Image Point Operations" href="Image_Point_Operations.html" />
-    <link rel="prev" title="Dynamic Earth and Planets" href="Dynamic_Earth.html" />
+    <link rel="prev" title="Seafloor ages" href="Dynamic_Earth.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -83,7 +83,7 @@
       <a href="Climate_Model.html">Climate model</a>
     </li>
     <li class="">
-      <a href="Dynamic_Earth.html">Dynamic Earth and Planets</a>
+      <a href="Dynamic_Earth.html">Seafloor ages</a>
     </li>
     <li class="active">
       <a href="">Image Filtering</a>
@@ -95,6 +95,9 @@
       <a href="Image_Transformations_and_Orthorectification.html">Image Transformations and orthorectification</a>
     </li>
     <li class="">
+      <a href="Keplerian_Orbits.html">Keplerian orbits</a>
+    </li>
+    <li class="">
       <a href="Milankovitch_cycles.html">Milankovitch cycles</a>
     </li>
     <li class="">
@@ -104,7 +107,7 @@
       <a href="Tides.html">Tides</a>
     </li>
     <li class="">
-      <a href="Wave_dispersion.html">Waves</a>
+      <a href="Wave_dispersion.html">Wave dispersion</a>
     </li>
   </ul>
   </li>
@@ -544,7 +547,7 @@ Image dimension = (390, 556)
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Dynamic_Earth.html" title="previous page">Dynamic Earth and Planets</a>
+    <a class='left-prev' id="prev-link" href="Dynamic_Earth.html" title="previous page">Seafloor ages</a>
     <a class='right-next' id="next-link" href="Image_Point_Operations.html" title="next page">Remote Sensing: Image Point Operations</a>
 
     </div>
