--- a/geosciences/Seismology.html
+++ b/geosciences/Seismology.html
@@ -83,7 +83,7 @@
       <a href="Climate_Model.html">Climate model</a>
     </li>
     <li class="">
-      <a href="Dynamic_Earth.html">Dynamic Earth and Planets</a>
+      <a href="Dynamic_Earth.html">Seafloor ages</a>
     </li>
     <li class="">
       <a href="Image_Filtering.html">Image Filtering</a>
@@ -95,6 +95,9 @@
       <a href="Image_Transformations_and_Orthorectification.html">Image Transformations and orthorectification</a>
     </li>
     <li class="">
+      <a href="Keplerian_Orbits.html">Keplerian orbits</a>
+    </li>
+    <li class="">
       <a href="Milankovitch_cycles.html">Milankovitch cycles</a>
     </li>
     <li class="active">
@@ -104,7 +107,7 @@
       <a href="Tides.html">Tides</a>
     </li>
     <li class="">
-      <a href="Wave_dispersion.html">Waves</a>
+      <a href="Wave_dispersion.html">Wave dispersion</a>
     </li>
   </ul>
   </li>
