deploy: 58ae07179118f9e01fd559259575150e9e94661b

--- a/geosciences/Keplerian_Orbits.html
+++ b/geosciences/Keplerian_Orbits.html
@@ -304,11 +304,11 @@
 </div>
 <p>For three body problem, only in restricted cases analytical solutions can be found. One of such cases is when a test particle is placed in a system that does not move with respect to the centre of mass of the system and does not rotate with respect to itself:</p>
 <div class="figure align-default">
-<a class="reference internal image-reference" href="geosciences/../images/restricted_three_body_problem.png"><img alt="geosciences/../images/restricted_three_body_problem.png" src="geosciences/../images/restricted_three_body_problem.png" style="width: 400px;" /></a>
+<a class="reference internal image-reference" href="../_images/restricted_three_body_problem.PNG"><img alt="../_images/restricted_three_body_problem.PNG" src="../_images/restricted_three_body_problem.PNG" style="width: 400px;" /></a>
 </div>
 <p>The solution to this problem reveals Lagrangian equilibrium points, where the test particle will maintain its position relative to larger bodies:</p>
 <div class="figure align-default">
-<a class="reference internal image-reference" href="geosciences/../images/lagrangian_points.png"><img alt="geosciences/../images/lagrangian_points.png" src="geosciences/../images/lagrangian_points.png" style="width: 400px;" /></a>
+<a class="reference internal image-reference" href="../_images/lagrangian_points.PNG"><img alt="../_images/lagrangian_points.PNG" src="../_images/lagrangian_points.PNG" style="width: 400px;" /></a>
 </div>
 </div>
 <div class="section" id="restricted-three-body-problem-numerical-solution">
