--- a/coding/NumPy_Arrays.html
+++ b/coding/NumPy_Arrays.html
@@ -39,7 +39,7 @@
     <script async="async" src="../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Intro to Python" href="Intro to Python/intro.html" />
+    <link rel="next" title="Jupyter Book guide" href="jupyter_book_guide.html" />
     <link rel="prev" title="Coding" href="intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -83,6 +83,9 @@
   <ul class="nav sidenav_l2">
     <li class="active">
       <a href="">NumPy Arrays</a>
+    </li>
+    <li class="">
+      <a href="jupyter_book_guide.html">Jupyter Book guide</a>
     </li>
     <li class="">
       <a href="Intro to Python/intro.html">Intro to Python</a>
@@ -518,7 +521,7 @@ A[:, ::-1] =
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Coding</a>
-    <a class='right-next' id="next-link" href="Intro to Python/intro.html" title="next page">Intro to Python</a>
+    <a class='right-next' id="next-link" href="jupyter_book_guide.html" title="next page">Jupyter Book guide</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
