--- a/coding/intro.html
+++ b/coding/intro.html
@@ -85,6 +85,9 @@
       <a href="NumPy_Arrays.html">NumPy Arrays</a>
     </li>
     <li class="">
+      <a href="jupyter_book_guide.html">Jupyter Book guide</a>
+    </li>
+    <li class="">
       <a href="Intro to Python/intro.html">Intro to Python</a>
     </li>
     <li class="">
