--- a/coding/Intro to Python/2_Variables.html
+++ b/coding/Intro to Python/2_Variables.html
@@ -84,6 +84,9 @@
     <li class="">
       <a href="../NumPy_Arrays.html">NumPy Arrays</a>
     </li>
+    <li class="">
+      <a href="../jupyter_book_guide.html">Jupyter Book guide</a>
+    </li>
     <li class="active">
       <a href="intro.html">Intro to Python</a>
       <ul class="nav sidenav_l3">
