deploy: 34421995e403897b836c7b3d54aca2051512aaf8

--- a/geosciences/Climate_Model.html
+++ b/geosciences/Climate_Model.html
@@ -40,7 +40,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Seafloor ages" href="Dynamic_Earth.html" />
-    <link rel="prev" title="1D Resistivity Forward Modelling" href="1D_Resistivity_Forward_Modelling.html" />
+    <link rel="prev" title="1D resistivity forward modelling" href="1D_Resistivity_Forward_Modelling.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -85,22 +85,16 @@
     <a href="intro.html">Geosciences</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="1D_Resistivity_Forward_Modelling.html">1D Resistivity Forward Modelling</a>
+      <a href="1D_Heat_Conduction.html">1D heat conduction (layered medium)</a>
+    </li>
+    <li class="">
+      <a href="1D_Resistivity_Forward_Modelling.html">1D resistivity forward modelling</a>
     </li>
     <li class="active">
       <a href="">Climate model</a>
     </li>
     <li class="">
       <a href="Dynamic_Earth.html">Seafloor ages</a>
-    </li>
-    <li class="">
-      <a href="Image_Filtering.html">Image Filtering</a>
-    </li>
-    <li class="">
-      <a href="Image_Point_Operations.html">Remote Sensing: Image Point Operations</a>
-    </li>
-    <li class="">
-      <a href="Image_Transformations_and_Orthorectification.html">Image Transformations and orthorectification</a>
     </li>
     <li class="">
       <a href="Keplerian_Orbits.html">Keplerian orbits</a>
@@ -116,6 +110,9 @@
     </li>
     <li class="">
       <a href="Wave_dispersion.html">Wave dispersion</a>
+    </li>
+    <li class="">
+      <a href="remote_sensing/intro.html">Remote sensing</a>
     </li>
   </ul>
   </li>
@@ -465,7 +462,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="1D_Resistivity_Forward_Modelling.html" title="previous page">1D Resistivity Forward Modelling</a>
+    <a class='left-prev' id="prev-link" href="1D_Resistivity_Forward_Modelling.html" title="previous page">1D resistivity forward modelling</a>
     <a class='right-next' id="next-link" href="Dynamic_Earth.html" title="next page">Seafloor ages</a>
 
     </div>
