--- a/mathematics/intro.html
+++ b/mathematics/intro.html
@@ -40,7 +40,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Calculus" href="calculus/intro.html" />
-    <link rel="prev" title="Wave dispersion" href="../geosciences/Wave_dispersion.html" />
+    <link rel="prev" title="Image transformations and orthorectification" href="../geosciences/remote_sensing/Image_Transformations_and_Orthorectification.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -307,7 +307,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../geosciences/Wave_dispersion.html" title="previous page">Wave dispersion</a>
+    <a class='left-prev' id="prev-link" href="../geosciences/remote_sensing/Image_Transformations_and_Orthorectification.html" title="previous page">Image transformations and orthorectification</a>
     <a class='right-next' id="next-link" href="calculus/intro.html" title="next page">Calculus</a>
 
     </div>
