--- a/geosciences/Keplerian_Orbits.html
+++ b/geosciences/Keplerian_Orbits.html
@@ -40,7 +40,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Milankovitch cycles" href="Milankovitch_cycles.html" />
-    <link rel="prev" title="Image Transformations and orthorectification" href="Image_Transformations_and_Orthorectification.html" />
+    <link rel="prev" title="Seafloor ages" href="Dynamic_Earth.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -85,22 +85,16 @@
     <a href="intro.html">Geosciences</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="1D_Resistivity_Forward_Modelling.html">1D Resistivity Forward Modelling</a>
+      <a href="1D_Heat_Conduction.html">1D heat conduction (layered medium)</a>
+    </li>
+    <li class="">
+      <a href="1D_Resistivity_Forward_Modelling.html">1D resistivity forward modelling</a>
     </li>
     <li class="">
       <a href="Climate_Model.html">Climate model</a>
     </li>
     <li class="">
       <a href="Dynamic_Earth.html">Seafloor ages</a>
-    </li>
-    <li class="">
-      <a href="Image_Filtering.html">Image Filtering</a>
-    </li>
-    <li class="">
-      <a href="Image_Point_Operations.html">Remote Sensing: Image Point Operations</a>
-    </li>
-    <li class="">
-      <a href="Image_Transformations_and_Orthorectification.html">Image Transformations and orthorectification</a>
     </li>
     <li class="active">
       <a href="">Keplerian orbits</a>
@@ -116,6 +110,9 @@
     </li>
     <li class="">
       <a href="Wave_dispersion.html">Wave dispersion</a>
+    </li>
+    <li class="">
+      <a href="remote_sensing/intro.html">Remote sensing</a>
     </li>
   </ul>
   </li>
@@ -826,7 +823,7 @@ plt.show()
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Image_Transformations_and_Orthorectification.html" title="previous page">Image Transformations and orthorectification</a>
+    <a class='left-prev' id="prev-link" href="Dynamic_Earth.html" title="previous page">Seafloor ages</a>
     <a class='right-next' id="next-link" href="Milankovitch_cycles.html" title="next page">Milankovitch cycles</a>
 
     </div>
