--- a/geosciences/Seismology.html
+++ b/geosciences/Seismology.html
@@ -85,22 +85,16 @@
     <a href="intro.html">Geosciences</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="1D_Resistivity_Forward_Modelling.html">1D Resistivity Forward Modelling</a>
+      <a href="1D_Heat_Conduction.html">1D heat conduction (layered medium)</a>
+    </li>
+    <li class="">
+      <a href="1D_Resistivity_Forward_Modelling.html">1D resistivity forward modelling</a>
     </li>
     <li class="">
       <a href="Climate_Model.html">Climate model</a>
     </li>
     <li class="">
       <a href="Dynamic_Earth.html">Seafloor ages</a>
-    </li>
-    <li class="">
-      <a href="Image_Filtering.html">Image Filtering</a>
-    </li>
-    <li class="">
-      <a href="Image_Point_Operations.html">Remote Sensing: Image Point Operations</a>
-    </li>
-    <li class="">
-      <a href="Image_Transformations_and_Orthorectification.html">Image Transformations and orthorectification</a>
     </li>
     <li class="">
       <a href="Keplerian_Orbits.html">Keplerian orbits</a>
@@ -116,6 +110,9 @@
     </li>
     <li class="">
       <a href="Wave_dispersion.html">Wave dispersion</a>
+    </li>
+    <li class="">
+      <a href="remote_sensing/intro.html">Remote sensing</a>
     </li>
   </ul>
   </li>
