--- a/geosciences/Wave_dispersion.html
+++ b/geosciences/Wave_dispersion.html
@@ -39,7 +39,7 @@
     <script async="async" src="../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Mathematics" href="../mathematics/intro.html" />
+    <link rel="next" title="Remote sensing" href="remote_sensing/intro.html" />
     <link rel="prev" title="Tides" href="Tides.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -85,22 +85,16 @@
     <a href="intro.html">Geosciences</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="1D_Resistivity_Forward_Modelling.html">1D Resistivity Forward Modelling</a>
+      <a href="1D_Heat_Conduction.html">1D heat conduction (layered medium)</a>
+    </li>
+    <li class="">
+      <a href="1D_Resistivity_Forward_Modelling.html">1D resistivity forward modelling</a>
     </li>
     <li class="">
       <a href="Climate_Model.html">Climate model</a>
     </li>
     <li class="">
       <a href="Dynamic_Earth.html">Seafloor ages</a>
-    </li>
-    <li class="">
-      <a href="Image_Filtering.html">Image Filtering</a>
-    </li>
-    <li class="">
-      <a href="Image_Point_Operations.html">Remote Sensing: Image Point Operations</a>
-    </li>
-    <li class="">
-      <a href="Image_Transformations_and_Orthorectification.html">Image Transformations and orthorectification</a>
     </li>
     <li class="">
       <a href="Keplerian_Orbits.html">Keplerian orbits</a>
@@ -116,6 +110,9 @@
     </li>
     <li class="active">
       <a href="">Wave dispersion</a>
+    </li>
+    <li class="">
+      <a href="remote_sensing/intro.html">Remote sensing</a>
     </li>
   </ul>
   </li>
@@ -7695,7 +7692,7 @@ b28AAAAdZGF0YQAAAAEAAAAATGF2ZjU4LjI5LjEwMA==
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Tides.html" title="previous page">Tides</a>
-    <a class='right-next' id="next-link" href="../mathematics/intro.html" title="next page">Mathematics</a>
+    <a class='right-next' id="next-link" href="remote_sensing/intro.html" title="next page">Remote sensing</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
